--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Articles listing page</h1>
+
 <table>
   <thead>
     <tr>
@@ -22,5 +23,5 @@
 </table>
 
 <p>
-  <%= link_to "Create new Article", new_article_path %>
+  <%= link_to 'Create new article', new_article_path %>
 </p>
